# ips-mace

./: README.md  pyproject.toml
ips_mace/: __init__.py  mace_model.py  torch_d3.py
nodes/: __init__.py
tests/: test_torch_d3.py
