[tool.poetry]
name = "ips-mace"
version = "0.1.0"
description = "MACE IPSuite Plugin"
authors = ["zincwarecode <zincwarecode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
mace-torch = "^0.3.4"
torch-dftd = "^0.4.0"
ipsuite = "^0.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
